加上nuit 移除不必要的檔案

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ TestResults
 [Tt]humbs.db 
 _ReSharper.*
 *.resharper
+/ArtOfUnitTesting2ndEd.Samples/Chapter1/*
+/ArtOfUnitTesting2ndEd.Samples/packages
